layout bug fix

--- a/app/blocks/comments/comments.styl
+++ b/app/blocks/comments/comments.styl
@@ -1,6 +1,8 @@
 .b-comments
   margin-top: 30px;
 
+.b-comments .b-work-with
+  display: inline-block
 .b-comments .b-work-with span
   margin: 5px 5px 5px 5px;
   float: left;
