--- a/app/index.styl
+++ b/app/index.styl
@@ -3,6 +3,8 @@
 ul li
   list-style-type: none;
 
+body
+  position: relative;
 
 .col-no-padding
   padding: 0 !important
